Updated servers.url to INPUT type
