# src/openapi.js
@@ -6,7 +6,12 @@ module.exports = {
     version: process.env.npm_package_version
   },
   servers: [{
-    url: 'http://localhost:3000'
+    url: '{FunctionUrl}',
+    variables: {
+      FunctionUrl: {
+        default: 'http://localhost:3000'
+      }
+    }
   }],
 
   // TensorFlow schema.
