# src/swagger.json
@@ -2,11 +2,16 @@
   "openapi": "3.0.0",
   "info": {
     "title": "human-face-detection",
-    "version": "0.0.1"
+    "version": "0.1.4"
   },
   "servers": [
     {
-      "url": "http://localhost:3000"
+      "url": "{FunctionUrl}",
+      "variables": {
+        "FunctionUrl": {
+          "default": "http://localhost:3000"
+        }
+      }
     }
   ],
   "components": {
